added Query Parameters to Get requests and tested it